@@ -11,41 +11,58 @@ import com.google.common.base.Splitter;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableListMultimap;
 import com.google.common.collect.Multimap;
+import de.ii.xtraplatform.features.domain.SchemaBase.Type;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class SchemaToSourcePathsVisitor<T extends SchemaBase<T>>
+public class SchemaToPathsVisitor<T extends SchemaBase<T>>
     implements SchemaVisitor<T, Multimap<List<String>, T>> {
 
   static final Splitter SPLITTER = Splitter.on('/').omitEmptyStrings();
+  static final BiFunction<String, Boolean, String> IDENTITY = (path, isValue) -> path;
 
   private final BiFunction<String, Boolean, String> sourcePathTransformer;
   private final boolean useTargetPath;
   private int counter;
+  private int emptyCounter;
 
-  public SchemaToSourcePathsVisitor(BiFunction<String, Boolean, String> sourcePathTransformer) {
-    this(false, sourcePathTransformer);
+  SchemaToPathsVisitor(boolean useTargetPath) {
+    this(useTargetPath, IDENTITY);
   }
 
-  private SchemaToSourcePathsVisitor(
+  SchemaToPathsVisitor(
       boolean useTargetPath, BiFunction<String, Boolean, String> sourcePathTransformer) {
     this.sourcePathTransformer = sourcePathTransformer;
     this.useTargetPath = useTargetPath;
     this.counter = 0;
+    this.emptyCounter = 0;
+  }
+
+  private static List<String> appendToLast(List<String> list, String suffix) {
+    if (list.isEmpty()) {
+      return list;
+    }
+    List<String> newList = new ArrayList<>(list.subList(0, list.size() - 1));
+    newList.add(list.get(list.size() - 1) + suffix);
+
+    return newList;
   }
 
   @Override
   public Multimap<List<String>, T> visit(
       T schema, List<Multimap<List<String>, T>> visitedProperties) {
+    counter++;
+
     List<List<String>> paths =
         useTargetPath
-            ? ImmutableList.of(schema.getPath())
+            ? ImmutableList.of(appendToLast(schema.getPath(), "{priority=" + (counter) + "}")) // )
             // TODO: static cleanup method in PathParser
             : schema.getEffectiveSourcePaths().stream()
                 .map(
@@ -63,51 +80,64 @@ public class SchemaToSourcePathsVisitor<T extends SchemaBase<T>>
                             p.get(p.size() - 1)
                                 + sourcePath
                                     .substring(i)
-                                    .replaceAll("\\{constant=.*?\\}", "")
+                                    .replaceAll("\\{constant=.*?'\\}", "")
                                     .replaceAll("\\{sortKey=.*?\\}", "")
                                     .replaceAll("\\{primaryKey=.*?\\}", "")
-                                + (schema.isValue() ? "{priority=" + (counter++) + "}" : ""));
+                                + "{priority="
+                                + (counter)
+                                + "}");
                         return p.stream()
                             .flatMap(s -> SPLITTER.splitToList(s).stream())
                             .collect(Collectors.toList());
                       }
 
-                      return SPLITTER.splitToList(
-                          sourcePath + (schema.isValue() ? "{priority=" + (counter++) + "}" : ""));
+                      return SPLITTER.splitToList(sourcePath + "{priority=" + (counter) + "}");
                     })
                 .collect(Collectors.toList());
 
-    return (paths.isEmpty()
-            ? visitedProperties.stream()
-                .flatMap(
-                    map ->
-                        map.asMap().entrySet().stream()
-                            .flatMap(entry -> prependToKey(entry, ImmutableList.of())))
-            : paths.stream()
-                .flatMap(
-                    path -> {
-                      return Stream.concat(
-                          Stream.of(new AbstractMap.SimpleImmutableEntry<>(path, schema)),
-                          visitedProperties.stream()
-                              .flatMap(
-                                  map ->
-                                      map.asMap().entrySet().stream()
-                                          .flatMap(entry -> prependToKey(entry, path))));
-                    }))
+    if (!useTargetPath && paths.isEmpty()) {
+      paths = List.of(List.of("__EMPTY__", String.valueOf(counter)));
+    }
+
+    if (paths.isEmpty()) {
+      return visitedProperties.stream()
+          .flatMap(
+              map ->
+                  map.asMap().entrySet().stream().flatMap(entry -> prependToKey(entry, List.of())))
+          .collect(
+              ImmutableListMultimap.toImmutableListMultimap(
+                  Map.Entry::getKey, Map.Entry::getValue));
+    }
+
+    if (!useTargetPath
+        && schema.getType() == Type.OBJECT_ARRAY
+        && schema instanceof FeatureSchema
+        && (!((FeatureSchema) schema).getConcat().isEmpty()
+            || !((FeatureSchema) schema).getCoalesce().isEmpty())) {
+      return Stream.concat(
+              paths.stream().map(path -> Map.entry(path, schema)),
+              visitedProperties.stream()
+                  .flatMap(
+                      map ->
+                          map.asMap().entrySet().stream()
+                              .flatMap(entry -> prependToKey(entry, List.of()))))
+          .collect(
+              ImmutableListMultimap.toImmutableListMultimap(
+                  Map.Entry::getKey, Map.Entry::getValue));
+    }
+
+    return paths.stream()
+        .flatMap(
+            path ->
+                Stream.concat(
+                    Stream.of(Map.entry(path, schema)),
+                    visitedProperties.stream()
+                        .flatMap(
+                            map ->
+                                map.asMap().entrySet().stream()
+                                    .flatMap(entry -> prependToKey(entry, path)))))
         .collect(
             ImmutableListMultimap.toImmutableListMultimap(Map.Entry::getKey, Map.Entry::getValue));
-
-    /*return Stream.concat(
-            path.isEmpty()
-                    ? Stream.empty()
-                    : Stream.of(new AbstractMap.SimpleImmutableEntry<>(path, schema)),
-            visitedProperties.stream()
-                             .flatMap(map -> map.asMap()
-                                                .entrySet()
-                                                .stream()
-                                                .flatMap(entry -> prependToKey(entry, path)))
-    )
-                 .collect(ImmutableListMultimap.toImmutableListMultimap(Map.Entry::getKey, Map.Entry::getValue));*/
   }
 
   private Stream<Map.Entry<List<String>, T>> prependToKey(
@@ -120,7 +150,7 @@ public class SchemaToSourcePathsVisitor<T extends SchemaBase<T>>
   }
 
   private List<String> merge(List<String> parentPath, List<String> path) {
-    if (parentPath.isEmpty()) {
+    if (parentPath.isEmpty() || Objects.equals(parentPath.get(0), "__EMPTY__")) {
       return path;
     }
 
